# ChessGame2

./: ChessGame2.sln
ChessGame2/: CMakeLists.txt  ChessGame2.vcxproj  ChessGame2.vcxproj.filters
ChessGame2/Assets/: Piecesprite.psd  Untitled-1.psd  Untitled-2.psd
ChessGame2/Constants/: Constants.h  Define.h
ChessGame2/Include/: AllMoveValid.h  Animation.h  Board.h  BoardRenderer.h  BorderRenderer.h  Bot.h  ChessUtils.h  GameAudio.h  GameControl.h  GameController.h  GameRenderer.h  GameState.h  GameVideo.h  HighlightRenderer.h  InputController.h  MoveExecutor.h  MoveService.h  MoveValidator.h  Piece.h  PieceRenderer.h  StockfishPlay.h  TextureManager.h  Utility.h
ChessGame2/Include/Core/: AllMoveValid.h  Board.h  Bot.h  ChessEngineController.h  ChessEngineInterface.h  EventBus.h  GameControl.h  GameState.h  InputHandler.h  MoveExecutor.h  MoveLog.h  MoveService.h  MoveValidator.h  NotationService.h  Piece.h  StockfishAI.h  StockfishEngine.h  ToFEN.h  UIManager.h  Utility.h
ChessGame2/Include/Core/ChessEngine/: ChessEngineController.h  ChessEngineInterface.h  StockfishAI.h  StockfishEngine.h
ChessGame2/Include/Core/State/: Aistate.hpp  GameState.hpp  Move.hpp  Type.hpp  UiState.hpp  Undo.hpp
ChessGame2/Include/UI/: AnalysisPanel.h  Animation.h  BoardRenderer.h  Bot.h  EvaluationBar.h  GameAudio.h  GameVideo.h  InformationPanel.h  InputController.h  PieceRenderer.h  PromotionController.h  TextureManager.h
ChessGame2/Src/Audio/: GameAudio.cpp
ChessGame2/Src/Bot/: DumpBot.cpp  StockfishEngine.cpp
ChessGame2/Src/Game Core/: AllMoveValid.cpp  Board.cpp  ChessEngineController.cpp  EventBus.cpp  GameControl.cpp  GameController.cpp  MoveExecutor.cpp  MoveLog.cpp  MoveService.cpp  MoveValidator.cpp  NotationService.cpp  PromotionController.cpp  StockfishAI.cpp  StockfishEngine.cpp  ToFEN.cpp
ChessGame2/Src/Game Engine/: Animation.cpp  BoardRenderer.cpp  BorderRenderer.cpp  GameVideo.cpp  HighlightRenderer.cpp  InputController.cpp  PieceRenderer.cpp  StockfishPlay.cpp  TextureManager.cpp  Utility.cpp
ChessGame2/Src/Input/: InputController.cpp  InputHandler.cpp  Utility.cpp
ChessGame2/Src/UI/: AnalysisPanel.cpp  Animation.cpp  BoardRenderer.cpp  EvaluationBar.cpp  InformationPanel.cpp  PieceRenderer.cpp  TextureManager.cpp  UIManager.cpp
ChessGame2/Src/main/: GameVideo.cpp  main.cpp
ChessGame2/Test/Include/: BoardToFEN_Test.h  StockfishWrapper_Test.h  Undo_Test.h
ChessGame2/Test/Src/: BoardToFEN_Test.cpp  StockfishWrapper_Test.cpp  Undo_Test.cpp  main_Test.cpp
